--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
     "start": "yarn next start"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.4",
+    "@geist-ui/icons": "^1.0.1",
     "ms": "2.1.3",
     "next": "^12.1.0",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "typescript": "^4.6.2"
   }
 }
